Complete refactoring with passing tests

--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -60,7 +60,7 @@
                                 <div class="panel-body">
                                     <ul>
                                         <li><a href="{{ url_for('recordtype.index_view') }}">Record Types</a></li>
-                                        <li><a href="{{ url_for('financialstatementtype.index_view') }}">Financial Statement Types</a></li>
+                                        <li><a href="{{ url_for('financialstatement.index_view') }}">Financial Statement Types</a></li>
                                         <li><a href="{{ url_for('recordformula.index_view') }}">Record Formulas</a></li>
                                     </ul>
                                 </div>
